--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
             <artifactId>poi-ooxml</artifactId>
             <version>3.16</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.6</version>
+        </dependency>
 
 
         <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
